// Copyright (c) 2019 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/any.proto";

package federation;

option go_package = "github.com/mosuka/blast/protobuf/federation";

service Federation {
    rpc Get (Document) returns (Document) {}
    rpc Index (stream Document) returns (UpdateResult) {}
    rpc Delete (stream Document) returns (UpdateResult) {}
    rpc Search (SearchRequest) returns (SearchResponse) {}
}

message Document {
    string id = 1;
    google.protobuf.Any fields = 2;
}

message UpdateResult {
    int32 count = 1;
}

message SearchRequest {
    google.protobuf.Any search_request = 1;
}

message SearchResponse {
    google.protobuf.Any search_result = 1;
}
